fix(showcase): avoid blue button color on iOS 15

--- a/src/angular-core/styles/typography/_reset.scss
+++ b/src/angular-core/styles/typography/_reset.scss
@@ -57,6 +57,7 @@
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+    color: inherit;
   }
 
   table {
