--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -115,6 +115,7 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  color: inherit;
 }
 
 table {
